<resources>
    <string name="app_name">LEDs Bluetooth Control</string>
    <string name="appVersion">0.1a</string>

    <string name="statusInit">BT not connected</string>
    <string name="statusConnecting">Connecting</string>
    <string name="statusConnected">Connected</string>
    <string name="statusError">Connection error</string>

    <string name="buttonConnect">Connect</string>

    <string name="txtMode">Mode:</string>

    <string-array name="modes_list">
        <item>OFF</item>
        <item>ON</item>
        <item>CYCLE</item>
        <item>FADE</item>
    </string-array>

    <string name="brightness">Brightness</string>
    <string name="speed">Speed</string>

    <string name="no_bt_device">Bluetooth is not available.</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="macFailed">Error retrieving MAC address.</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled.</string>
    <string name="makingConnectionString">Connecting to bluetooth device</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

</resources>
