<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:text="@string/statusInit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appStatus"
            android:layout_weight="1"
            android:textColor="@android:color/background_light"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <Button
            android:text="@string/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:onClick="onClickConnect" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:text="@string/txtMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/txtMode" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modesSpinner"
            android:layout_weight="1"
            android:entries="@array/modes_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:id="@+id/colorPickerLayout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <com.thebluealliance.spectrum.SpectrumPalette
            android:id="@+id/colorPickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:spectrum_autoPadding="true"
            app:spectrum_outlineWidth="2dp"
            app:spectrum_colors="@array/list_colors" />

        <!--<com.flask.colorpicker.ColorPickerView
            android:id="@+id/colorPickerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            alphaSlider="false"
            density="12"
            lightnessSlider="false"
            wheelType="FLOWER"
            />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:id="@+id/brightnessLayout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sliderGroupBrightnessSlider"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:progress="255"
                android:max="255"/>

            <TextView
                android:id="@+id/sliderGroupBrightnessValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="255"
                android:ems="3"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:id="@+id/speedLayout"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sliderGroupSpeedSlider"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:progress="5000"
                android:max="10000"/>

            <TextView
                android:id="@+id/sliderGroupSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5000"
                android:ems="3"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
